--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -44,7 +44,7 @@ jobs:
         run: terraform force-unlock -force facfcb71-6daf-181b-e89a-7507244b7567 || echo "No lock found or already released"
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: terraform plan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage' || github.ref == 'refs/heads/production'
