ci(terraform): pipeline modified

--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -46,9 +46,20 @@ jobs:
       - name: Terraform Plan
         run: |
           export TF_LOG=DEBUG
-          terraform plan -lock-timeout=5m -out=tfplan
-
+          terraform plan \
+            -var "resource_group_name=my-microservices-rg" \
+            -var "location=East US" \
+            -var "acr_name=mymicroservicesacr" \
+            -var 'microservices=[{"name":"auth-api","image":"microservice-app-example-auth-api:latest","port":8000},{"name":"users-api","image":"microservice-app-example-users-api:latest","port":8083},{"name":"todos-api","image":"microservice-app-example-todos-api:latest","port":8082},{"name":"frontend","image":"microservice-app-example-frontend:latest","port":8080},{"name":"log-processor","image":"microservice-app-example-log-message-processor:latest","port":5000}]' \
+            -lock-timeout=5m \
+            -out=tfplan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/stage' || github.ref == 'refs/heads/production'
-        run: terraform apply -auto-approve tfplan
+        run: |
+          terraform apply \
+            -var "resource_group_name=my-microservices-rg" \
+            -var "location=East US" \
+            -var "acr_name=mymicroservicesacr" \
+            -var 'microservices=[{"name":"auth-api","image":"microservice-app-example-auth-api:latest","port":8000},{"name":"users-api","image":"microservice-app-example-users-api:latest","port":8083},{"name":"todos-api","image":"microservice-app-example-todos-api:latest","port":8082},{"name":"frontend","image":"microservice-app-example-frontend:latest","port":8080},{"name":"log-processor","image":"microservice-app-example-log-message-processor:latest","port":5000}]' \
+            -auto-approve tfplan
