fix: trigger pipeline on master branch

--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -3,7 +3,7 @@ name: Infrastructure Deployment
 on:
   push:
     branches:
-      - main      
+      - master      
   workflow_dispatch:
 
 jobs:
